add log by range date
